--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,6 @@
 
 	<properties>
 		<java.version>11</java.version>
-		<rollbar.version>1.7.6</rollbar.version>
 		<swagger-parser.version>2.0.25</swagger-parser.version>
 	</properties>
 
@@ -51,12 +50,6 @@
 		<dependency>	
 		    <groupId>org.eclipse.jetty</groupId>
 		    <artifactId>jetty-reactive-httpclient</artifactId>
-		</dependency>
-		
-		<dependency>
-			<groupId>com.rollbar</groupId>
-			<artifactId>rollbar-spring-boot-webmvc</artifactId>
-			<version>${rollbar.version}</version>
 		</dependency>
 
 		<dependency>
@@ -101,7 +94,7 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-<!-- 			<plugin>
+			<plugin>
 				<groupId>org.openapitools</groupId>
 				<artifactId>openapi-generator-maven-plugin</artifactId>
 				<version>5.1.0</version>
@@ -135,7 +128,7 @@
 						</configuration>
 					</execution>
 				</executions>
-			</plugin> -->
+			</plugin>
 		</plugins>
 	</build>
 
