--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,7 @@
           
 logging:
   level:
-    org.springframework.security: TRACE
+    org.springframework.security: DEBUG
     org.springframework.web.client.RestTemplate: DEBUG
     reactor.netty.http.client: TRACE
     org.apache.http: DEBUG
@@ -21,19 +21,6 @@ spring:
     hibernate:
       ddl-auto: validate
       
-  # JAGGAER CONFIG
-  security:
-    oauth2:
-      client:
-        provider:
-          jaggaer:
-            token-uri: https://crowncommercialservice-ws02-prep.bravosolution.co.uk/esop/jint/api/public/v1/tokens 
-        registration:
-          jaggaer:
-            authorization-grant-type: client_credentials
-#            client-id: "SET IN ENV"
-#            client-secret: "SET IN ENV"
-
 config:
   ocds:
     authority: ocds
@@ -59,6 +46,19 @@ spring:
       on-profile: local
   datasource: 
     url: jdbc:h2:mem:tenders;MODE=PostgreSQL
+
+  # JAGGAER CONFIG
+  security:
+    oauth2:
+      client:
+        provider:
+          jaggaer:
+            token-uri: https://crowncommercialservice-ws02-prep.bravosolution.co.uk/esop/jint/api/public/v1/tokens 
+        registration:
+          jaggaer:
+            authorization-grant-type: client_credentials
+#            client-id: "SET IN ENV"
+#            client-secret: "SET IN ENV"
     
   jpa:
     database: h2
