--- a/manifest.yml
+++ b/manifest.yml
@@ -1,8 +1,8 @@
 ---
 applications:
-- name: ((CF_ROUTE_PREFIX))ccs-scale-cat-service
+- name: ((CF_APP_PREFIX))-ccs-scale-cat-service
   routes:
-  - route: ((CF_ROUTE_PREFIX))ccs-scale-cat-service.apps.internal
+  - route: ((CF_APP_PREFIX))-ccs-scale-cat-service.apps.internal
   buildpacks: 
     - https://github.com/cloudfoundry/java-buildpack#v4.33
   path: target/ccs-scale-cat-service-0.0.1-SNAPSHOT.jar
