--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -56,7 +56,7 @@ spring:
   config:
     activate:
       on-profile:
-        - dev
+        - cloud
         - local
         - local-pg
 
@@ -86,6 +86,19 @@ spring:
     show-sql: true
     hibernate:
       ddl-auto: create-drop
+
+---
+spring:
+  config:
+    activate:
+      on-profile:
+        - cloud
+        - local-pg
+  jpa:
+    database: postgresql
+    show-sql: true
+    hibernate:
+      ddl-auto: validate      
       
 ---
 spring:
@@ -95,8 +108,3 @@ spring:
         - local-pg
   datasource: 
     url: jdbc:postgresql://127.0.0.1:5432/cat
-  jpa:
-    database: postgresql
-    show-sql: true
-    hibernate:
-      ddl-auto: validate      
