--- a/manifest.yml
+++ b/manifest.yml
@@ -1,15 +1,10 @@
 ---
 applications:
-- name: ((CF_ROUTE_PREFIX))ccs-scale-cat-service
+- name: ((CF_APP_PREFIX))-ccs-scale-cat-service
   routes:
-  - route: ((CF_ROUTE_PREFIX))ccs-scale-cat-service.apps.internal
-  memory: ((CF_MEMORY))
+  - route: ((CF_APP_PREFIX))-ccs-scale-cat-service.apps.internal
   buildpacks: 
     - https://github.com/cloudfoundry/java-buildpack#v4.33
   path: target/ccs-scale-cat-service-0.0.1-SNAPSHOT.jar
   env:
-    AGREEMENTS_SERVICE_URL: ((AGREEMENTS_SERVICE_URL))
-    AGREEMENTS_SERVICE_API_KEY: ((AGREEMENTS_SERVICE_API_KEY))
-    ROLLBAR_ACCESS_TOKEN: ((ROLLBAR_ACCESS_TOKEN))
-    ROLLBAR_ENV: ((ROLLBAR_ENV))
     JBP_CONFIG_OPEN_JDK_JRE: '{ "jre": { version: 11.+ } }'
