--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,8 @@
 	<properties>
 		<java.version>11</java.version>
 		<swagger-parser.version>2.0.25</swagger-parser.version>
+		<guava.version>30.1.1-jre</guava.version>
+		<openapi-generator.version>5.1.1</openapi-generator.version>
 	</properties>
 
 	<dependencies>
@@ -59,6 +61,11 @@
 			<artifactId>jetty-reactive-httpclient</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>${guava.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 		</dependency>
@@ -66,6 +73,12 @@
 			<groupId>io.swagger.parser.v3</groupId>
 			<artifactId>swagger-parser</artifactId>
 			<version>${swagger-parser.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>com.google.guava</groupId>
+					<artifactId>guava</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -111,7 +124,7 @@
 			<plugin>
 				<groupId>org.openapitools</groupId>
 				<artifactId>openapi-generator-maven-plugin</artifactId>
-				<version>5.1.1</version>
+				<version>${openapi-generator.version}</version>
 				<executions>
 					<execution>
 						<goals>
