WebClient logging request/response

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,7 @@ logging:
     org.springframework.security: DEBUG
     org.springframework.web.client.RestTemplate: WARN
     org.apache.http: WARN
+    uk.gov.crowncommercial.dts.scale.cat: INFO
         
 spring:
   jpa:
