--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -38,6 +38,8 @@ config:
       baseUrl: https://crowncommercialservice-ws02-prep.bravosolution.co.uk
       timeoutDuration: 5
       addDivisionToProjectTeam: false
+      headerValueInvalidContentType: "; charset=UTF-8"
+      headerValueWWWAuthenticate: 'Bearer error="invalid_or_missing_token"'
       createProject:
         # CA-Lot-BuyerOrg e.g. RM1234-Lot1a-CCS
         defaultTitleFormat: "%s-%s-%s"
