--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,6 +23,10 @@ spring:
   datasource:
     hikari:
       connectionTimeout: 10000
+
+server:
+  error:
+    path: "/error"
       
 config:
   ocds:
