--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -83,10 +83,13 @@ config:
     agreementsService:
       # baseUrl: "SET IN ENV"
       # apiKey: "SET IN ENV"
+      timeoutDuration: 5
       getAgreementDetail:
         uriTemplate: /agreements/{agreement-id}
       getLotDetailsForAgreement:
         uriTemplate: /agreements/{agreement-id}/lots/{lot-id}
+      getEventTypesForAgreement:
+        uriTemplate: /agreements/{agreement-id}/lots/{lot-id}//event-types
 
     
 ---
