--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 		<swagger-parser.version>2.0.28</swagger-parser.version>
 		<guava.version>30.1.1-jre</guava.version>
 		<openapi-generator.version>5.2.1</openapi-generator.version>
-		<hibernate-types.version>2.13.0</hibernate-types.version>i
+		<hibernate-types.version>2.13.0</hibernate-types.version>
 	</properties>
 
 	<dependencies>
@@ -117,11 +117,6 @@
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.modelmapper</groupId>
-			<artifactId>modelmapper</artifactId>
-			<version>${modelmapper.version}</version>
 		</dependency>
 	</dependencies>
 
