SCC-753 - code review and unit tests

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -91,7 +91,7 @@ config:
       getLotEventTypeDataTemplates:
         uriTemplate: /agreements/{agreement-id}/lots/{lot-id}/event-types/{event-type}/data-templates
       getEventTypesForAgreement:
-        uriTemplate: /agreements/{agreement-id}/lots/{lot-id}//event-types
+        uriTemplate: /agreements/{agreement-id}/lots/{lot-id}/event-types
 
 
 ---
