--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
 		<guava.version>30.1.1-jre</guava.version>
 		<openapi-generator.version>5.2.1</openapi-generator.version>
 		<hibernate-types.version>2.13.0</hibernate-types.version>
+		<modelmapper.version>2.4.4</modelmapper.version>
 	</properties>
 
 	<dependencies>
@@ -109,6 +110,11 @@
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>${modelmapper.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
