--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ cache:
     - "$HOME/.m2"
 branches:
   only:
-    - "/^(feature|bugfix)\\/(SCC|SCAT|CON)-[0-9]+.*$/"
+    - "/^(feature|bugfix)\\/(SCC|SCAT)-[0-9]+.*$/"
     - "/^(release)\\/.*$/"
     - develop
     - main
@@ -26,7 +26,7 @@ deploy:
     script: CF_ENVIRONMENT=sbx2 bash ./deploy.sh
     on:
       all_branches: true
-      condition: "${TRAVIS_PULL_REQUEST_BRANCH:-$TRAVIS_BRANCH} =~ ^(feature|bugfix)\\/(SCC|SCAT|CON)-[0-9]+.*$"
+      condition: "${TRAVIS_PULL_REQUEST_BRANCH:-$TRAVIS_BRANCH} =~ ^(feature|bugfix)\\/(SCC|SCAT)-[0-9]+.*$"
 
   # DEVELOP
   - provider: script
