--- a/pom.xml
+++ b/pom.xml
@@ -51,8 +51,8 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
-    		<groupId>org.springframework.boot</groupId>
-    		<artifactId>spring-boot-starter-validation</artifactId>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.retry</groupId>
@@ -146,6 +146,7 @@
 				<version>${openapi-generator.version}</version>
 				<executions>
 					<execution>
+						<id>tenders-api</id>
 						<goals>
 							<goal>generate</goal>
 						</goals>
