Added a 'devMode' application flag - to assist in development
When set to 'true' error details API responses will include the
exception message. Only enabled on dev and sandboxes.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -109,7 +109,8 @@ config:
         uriTemplate: /user-profiles?user-id={user-id}
       getUserContacts:
         uriTemplate: /user-profiles/contacts?user-id={email}
-
+  #flags:
+    # devMode: "SET IN ENV"
 ---
 spring:
   config:
