Journey service boilerplate

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,7 +12,7 @@ logging:
     org.springframework.web.client.RestTemplate: WARN
     org.apache.http: WARN
     uk.gov.crowncommercial.dts.scale.cat: DEBUG
-    org.eclipse.jetty.client: DEBUG
+    # org.eclipse.jetty.client: DEBUG
 
 spring:
   jpa:
