--- a/pom.xml
+++ b/pom.xml
@@ -156,7 +156,7 @@
 							<goal>generate</goal>
 						</goals>
 						<configuration>
-							<inputSpec>/Users/adge/Code/GitHub/ccs-scale-api-definitions/cat/CaT-service.yaml</inputSpec>
+							<inputSpec>https://raw.githubusercontent.com/Crown-Commercial-Service/ccs-scale-api-definitions/master/cat/CaT-service.yaml</inputSpec>
 							<generatorName>spring</generatorName>
 							<generateModels>true</generateModels>
 							<generateSupportingFiles>false</generateSupportingFiles>
