Publish event (Rfx)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -117,6 +117,8 @@ config:
         endpoint: /esop/jint/api/public/ja/v1/companyprofiles
       getAttachment:
         endpoint: /esop/jint/api/public/ja/v1/attachments?fileId={fileId}&fileName={fileName}
+      publishRfx:
+        endpoint: /esop/jint/api/public/ja/v1/rfxworkflows/publish
 
     agreementsService:
       # baseUrl: "SET IN ENV"
